# pytorch-stable-abi-transform

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
action/: action.yml
docs/: claude-skill.md  user-guide.md
examples/: README.md
examples/vllm/: .stable-abi.yaml
scripts/: gen_rules.py  vllm_validate_coverage.py
src/: AstCallbacks.cpp  AstCallbacks.h  Config.cpp  Config.h  Helpers.h  PreprocessorCallbacks.cpp  PreprocessorCallbacks.h  Reporter.cpp  Reporter.h  Rules.h  StableAbiAction.cpp  StableAbiAction.h  TransformerRules.cpp  TransformerRules.h  Verifier.cpp  Verifier.h  main.cpp
test/: run_tests.sh
test/expected/: comparison_check.cpp  cuda_stream.cpp  dispatch.cpp  dtype.cpp  includes.cpp  method_to_func.cpp  new_rules.cpp  optional_type.cpp  partial.cpp  smoke.cpp  torch_check.cpp  types.cpp  vllm_patterns.cpp
test/inputs/: comparison_check.cpp  cuda_stream.cpp  dispatch.cpp  dtype.cpp  includes.cpp  method_to_func.cpp  new_rules.cpp  optional_type.cpp  partial.cpp  smoke.cpp  torch_check.cpp  types.cpp  vllm_patterns.cpp
